Replace the kubebuilder flags for GRPCRoute v1alpha2 so that they're the same as v1.
Signed-off-by: Flynn <emissary@flynn.kodachi.com>

--- a/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
@@ -2349,7 +2349,14 @@ spec:
     storage: true
     subresources:
       status: {}
-  - deprecated: true
+  - additionalPrinterColumns:
+    - jsonPath: .spec.hostnames
+      name: Hostnames
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    deprecated: true
     deprecationWarning: The v1alpha2 version of GRPCRoute has been deprecated and
       will be removed in a future release of the API. Please upgrade to v1.
     name: v1alpha2
@@ -4674,6 +4681,8 @@ spec:
         type: object
     served: true
     storage: false
+    subresources:
+      status: {}
 status:
   acceptedNames:
     kind: ""
