--- a/conformance/reports/v1.2.0/istio-istio/experimental-1.24-default-report.yaml
+++ b/conformance/reports/v1.2.0/istio-istio/experimental-1.24-default-report.yaml
@@ -8,7 +8,7 @@ implementation:
   organization: istio
   project: istio
   url: https://istio.io/
-  version: "1.24"
+  version: 1.24.0-alpha.0
 kind: ConformanceReport
 mode: default
 profiles:
