--- a/geps/gep-1767/metadata.yaml
+++ b/geps/gep-1767/metadata.yaml
@@ -2,6 +2,6 @@ apiVersion: internal.gateway.networking.k8s.io/v1alpha1
 kind: GEPDetails
 number: 1767
 name: CORS Filter
-status: Experimental
+status: Provisional
 authors:
   - lianglli
