--- a/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_backendtlspolicies.yaml
@@ -85,6 +85,15 @@ spec:
                   by default, but this default may change in the future to provide
                   a more granular application of the policy.
 
+                  TargetRefs must be _distinct_. This means either that:
+
+                  * They select different objects. If this is the case, then targetRef
+                    entries are distinct. In terms of fields, this means that the
+                    multi-part key defined by `group`, `kind`, and `name` must
+                    be unique across all targetRef entries in the BackendTLSPolicy.
+                  * They do not select different objects, each TargetRef that selects
+                    the same object must set the sectionName to a different value.
+
                   Support: Extended for Kubernetes Service
 
                   Support: Implementation-specific for any other resource
