--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,6 +123,7 @@ nav:
     - Overview: geps/overview.md
     - Provisional:
       - geps/gep-91/index.md
+      - geps/gep-1494/index.md
       - geps/gep-1651/index.md
       - geps/gep-1867/index.md
       - geps/gep-2648/index.md
