--- a/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_grpcroutes.yaml
@@ -1875,6 +1875,8 @@ spec:
                                 absolute lifetime of the cookie tracked by the gateway and
                                 is optional.
 
+                                Defaults to "Session".
+
                                 Support: Core for "Session" type
 
                                 Support: Extended for "Permanent" type
