--- a/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
@@ -2635,6 +2635,8 @@ spec:
                                 absolute lifetime of the cookie tracked by the gateway and
                                 is optional.
 
+                                Defaults to "Session".
+
                                 Support: Core for "Session" type
 
                                 Support: Extended for "Permanent" type
@@ -5700,6 +5702,8 @@ spec:
                                 When set to "Session", AbsoluteTimeout indicates the
                                 absolute lifetime of the cookie tracked by the gateway and
                                 is optional.
+
+                                Defaults to "Session".
 
                                 Support: Core for "Session" type
 
