--- a/conformance/reports/v0.7.1/nginx-nginx-gateway-fabric/v0.5.0-report.yaml
+++ b/conformance/reports/v0.7.1/nginx-nginx-gateway-fabric/v0.5.0-report.yaml
@@ -3,10 +3,10 @@ date: "2023-07-25T20:48:53Z"
 gatewayAPIVersion: v0.7.1
 implementation:
   contact:
-  - https://github.com/nginxinc/nginx-gateway-fabric/discussions/new/choose
-  organization: nginxinc
+  - https://github.com/nginx/nginx-gateway-fabric/discussions/new/choose
+  organization: nginx
   project: nginx-gateway-fabric
-  url: github.com/nginxinc/nginx-gateway-fabric
+  url: github.com/nginx/nginx-gateway-fabric
   version: "v0.5.0"
 kind: ConformanceReport
 profiles:
