--- a/conformance/reports/v0.8.0/nginx-nginx-gateway-fabric/v0.6.0-report.yaml
+++ b/conformance/reports/v0.8.0/nginx-nginx-gateway-fabric/v0.6.0-report.yaml
@@ -3,10 +3,10 @@ date: "2023-08-31T16:40:14Z"
 gatewayAPIVersion: v0.8.0
 implementation:
   contact:
-  - https://github.com/nginxinc/nginx-gateway-fabric/discussions/new/choose
-  organization: nginxinc
+  - https://github.com/nginx/nginx-gateway-fabric/discussions/new/choose
+  organization: nginx
   project: nginx-gateway-fabric
-  url: https://github.com/nginxinc/nginx-gateway-fabric
+  url: https://github.com/nginx/nginx-gateway-fabric
   version: v0.6.0
 kind: ConformanceReport
 profiles:
