--- a/conformance/reports/v1.1.0/nginx-nginx-gateway-fabric/standard-1.3.0-default-report.yaml
+++ b/conformance/reports/v1.1.0/nginx-nginx-gateway-fabric/standard-1.3.0-default-report.yaml
@@ -1,14 +1,14 @@
 apiVersion: gateway.networking.k8s.io/v1alpha1
-date: "2024-08-20T18:43:28Z"
-gatewayAPIChannel: experimental
+date: "2024-06-11T17:06:57Z"
+gatewayAPIChannel: standard
 gatewayAPIVersion: v1.1.0
 implementation:
   contact:
-  - https://github.com/nginxinc/nginx-gateway-fabric/discussions/new/choose
-  organization: nginxinc
+  - https://github.com/nginx/nginx-gateway-fabric/discussions/new/choose
+  organization: nginx
   project: nginx-gateway-fabric
-  url: https://github.com/nginxinc/nginx-gateway-fabric
-  version: v1.4.0
+  url: https://github.com/nginx/nginx-gateway-fabric
+  version: v1.3.0
 kind: ConformanceReport
 mode: default
 profiles:
@@ -53,11 +53,3 @@ profiles:
     - HTTPRouteRequestTimeout
   name: GATEWAY-HTTP
   summary: Core tests succeeded. Extended tests succeeded.
-- core:
-    result: success
-    statistics:
-      Failed: 0
-      Passed: 11
-      Skipped: 0
-  name: GATEWAY-TLS
-  summary: Core tests succeeded.
