--- a/conformance/reports/v1.2.0/nginx-nginx-gateway-fabric/experimental-1.5.0-default-report.yaml
+++ b/conformance/reports/v1.2.0/nginx-nginx-gateway-fabric/experimental-1.5.0-default-report.yaml
@@ -4,10 +4,10 @@ gatewayAPIChannel: experimental
 gatewayAPIVersion: v1.2.0
 implementation:
   contact:
-  - https://github.com/nginxinc/nginx-gateway-fabric/discussions/new/choose
-  organization: nginxinc
+  - https://github.com/nginx/nginx-gateway-fabric/discussions/new/choose
+  organization: nginx
   project: nginx-gateway-fabric
-  url: https://github.com/nginxinc/nginx-gateway-fabric
+  url: https://github.com/nginx/nginx-gateway-fabric
   version: v1.5.0
 kind: ConformanceReport
 mode: default
