--- a/conformance/reports/v1.0.0/nginx-nginx-gateway-fabric/v1.1.0-report.yaml
+++ b/conformance/reports/v1.0.0/nginx-nginx-gateway-fabric/v1.1.0-report.yaml
@@ -3,10 +3,10 @@ date: "2023-12-14T20:16:14Z"
 gatewayAPIVersion: v1.0.0
 implementation:
   contact:
-  - https://github.com/nginx/nginx-kubernetes-gateway/discussions/new/choose
+  - https://github.com/nginx/nginx-gateway-fabric/discussions/new/choose
   organization: nginx
-  project: nginx-kubernetes-gateway
-  url: https://github.com/nginx/nginx-kubernetes-gateway
+  project: nginx-gateway-fabric
+  url: https://github.com/nginx/nginx-gateway-fabric
   version: v1.1.0
 kind: ConformanceReport
 profiles:
