Fix typo in documentation

--- a/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
@@ -354,7 +354,7 @@ spec:
                   Listeners are _Conflicted_, and the implementation MUST set the "Conflicted"
                   condition in the Listener Status to "True".
 
-                  The words "indistict" and "conflicted" are considered equivalent for the
+                  The words "indistinct" and "conflicted" are considered equivalent for the
                   purpose of this documentation.
 
                   Implementations MAY choose to accept a Gateway with some Conflicted
@@ -1434,7 +1434,7 @@ spec:
                   Listeners are _Conflicted_, and the implementation MUST set the "Conflicted"
                   condition in the Listener Status to "True".
 
-                  The words "indistict" and "conflicted" are considered equivalent for the
+                  The words "indistinct" and "conflicted" are considered equivalent for the
                   purpose of this documentation.
 
                   Implementations MAY choose to accept a Gateway with some Conflicted
