--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -420,7 +420,7 @@ spec:
                   Listeners are _Conflicted_, and the implementation MUST set the "Conflicted"
                   condition in the Listener Status to "True".
 
-                  The words "indistict" and "conflicted" are considered equivalent for the
+                  The words "indistinct" and "conflicted" are considered equivalent for the
                   purpose of this documentation.
 
                   Implementations MAY choose to accept a Gateway with some Conflicted
@@ -1654,7 +1654,7 @@ spec:
                   Listeners are _Conflicted_, and the implementation MUST set the "Conflicted"
                   condition in the Listener Status to "True".
 
-                  The words "indistict" and "conflicted" are considered equivalent for the
+                  The words "indistinct" and "conflicted" are considered equivalent for the
                   purpose of this documentation.
 
                   Implementations MAY choose to accept a Gateway with some Conflicted
