gep: add GEP-3388 HTTP Retry Budget (#3488)
* gep: add GEP-3388 HTTPRoute Retry Budget

* Update metadata for gep-1731 & gep-3388

* Correcting information and readability

* Improve background information and context; remove unused sub-sections

* Mark some sections as TODO

* add mkdocs

* formatting

* Minor improvements

* Minor improvements

* Detail comparison between Policy Attachment & HTTPRoute configuration; minor improvements

* Better compare retry budget options between Linkerd and Envoy implementations

* Apply suggestions from code review

Co-authored-by: Mike Morris <mikemorris@users.noreply.github.com>

* Remove consideration to express budget as a Fraction

---------

Co-authored-by: Mike Morris <mikemorris@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,6 +128,7 @@ nav:
       - geps/gep-1867/index.md
       - geps/gep-2648/index.md
       - geps/gep-2649/index.md
+      - geps/gep-3388/index.md
     - Implementable:
       - geps/gep-3155/index.md
     - Experimental:
