docs: Gateway parametersRef Accepted condition
The `InvalidParameters` reason SHOULD be used for the `Accepted`
condition in case the object referenced does not exist, is of an
unsupported Kind, or is malformed.

Signed-off-by: Mattia Lavacca <lavacca.mattia@gmail.com>

--- a/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
@@ -228,6 +228,11 @@ spec:
                       the merging behavior is implementation specific.
                       It is generally recommended that GatewayClass provides defaults that can be overridden by a Gateway.
 
+                      If the referent cannot be found, refers to an unsupported kind, or when
+                      the data within that resource is malformed, the Gateway SHOULD be
+                      rejected with the "Accepted" status condition set to "False" and an
+                      "InvalidParameters" reason.
+
                       Support: Implementation-specific
                     properties:
                       group:
@@ -1307,6 +1312,11 @@ spec:
                       The Gateway's GatewayClass may provide its own `parametersRef`. When both are specified,
                       the merging behavior is implementation specific.
                       It is generally recommended that GatewayClass provides defaults that can be overridden by a Gateway.
+
+                      If the referent cannot be found, refers to an unsupported kind, or when
+                      the data within that resource is malformed, the Gateway SHOULD be
+                      rejected with the "Accepted" status condition set to "False" and an
+                      "InvalidParameters" reason.
 
                       Support: Implementation-specific
                     properties:
