--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -133,6 +133,43 @@ spec:
                 - message: Hostname values must be unique
                   rule: 'self.all(a1, a1.type == ''Hostname'' ? self.exists_one(a2,
                     a2.type == a1.type && a2.value == a1.value) : true )'
+              allowedListeners:
+                description: |-
+                  AllowedListeners defines which ListenerSets can be attached to this Gateway.
+                  While this feature is experimental, the default value is to allow no ListenerSets.
+                items:
+                  description: AllowedListeners defines which ListenerSets can be
+                    attached to this Gateway.
+                  properties:
+                    namespaces:
+                      default:
+                        from: None
+                      description: |-
+                        Namespaces defines which namespaces ListenerSets can be attached to this Gateway.
+                        While this feature is experimental, the default value is to allow no ListenerSets.
+                      properties:
+                        from:
+                          allOf:
+                          - enum:
+                            - All
+                            - Selector
+                            - Same
+                          - enum:
+                            - Same
+                            - None
+                          default: None
+                          description: |-
+                            From indicates where ListenerSets can attach to this Gateway. Possible
+                            values are:
+
+                            * Same: Only ListenerSets in the same namespace may be attached to this Gateway.
+                            * None: Only listeners defined in the Gateway's spec are allowed
+
+                            While this feature is experimental, the default value None
+                          type: string
+                      type: object
+                  type: object
+                type: array
               backendTLS:
                 description: |-
                   BackendTLS configures TLS settings for when this Gateway is connecting to
@@ -1367,6 +1404,43 @@ spec:
                 - message: Hostname values must be unique
                   rule: 'self.all(a1, a1.type == ''Hostname'' ? self.exists_one(a2,
                     a2.type == a1.type && a2.value == a1.value) : true )'
+              allowedListeners:
+                description: |-
+                  AllowedListeners defines which ListenerSets can be attached to this Gateway.
+                  While this feature is experimental, the default value is to allow no ListenerSets.
+                items:
+                  description: AllowedListeners defines which ListenerSets can be
+                    attached to this Gateway.
+                  properties:
+                    namespaces:
+                      default:
+                        from: None
+                      description: |-
+                        Namespaces defines which namespaces ListenerSets can be attached to this Gateway.
+                        While this feature is experimental, the default value is to allow no ListenerSets.
+                      properties:
+                        from:
+                          allOf:
+                          - enum:
+                            - All
+                            - Selector
+                            - Same
+                          - enum:
+                            - Same
+                            - None
+                          default: None
+                          description: |-
+                            From indicates where ListenerSets can attach to this Gateway. Possible
+                            values are:
+
+                            * Same: Only ListenerSets in the same namespace may be attached to this Gateway.
+                            * None: Only listeners defined in the Gateway's spec are allowed
+
+                            While this feature is experimental, the default value None
+                          type: string
+                      type: object
+                  type: object
+                type: array
               backendTLS:
                 description: |-
                   BackendTLS configures TLS settings for when this Gateway is connecting to
