--- a/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
@@ -154,6 +154,7 @@ spec:
                             - All
                             - Selector
                             - Same
+                            - None
                           - enum:
                             - Same
                             - None
@@ -612,6 +613,7 @@ spec:
                               - All
                               - Selector
                               - Same
+                              - None
                               type: string
                             selector:
                               description: |-
@@ -1425,6 +1427,7 @@ spec:
                             - All
                             - Selector
                             - Same
+                            - None
                           - enum:
                             - Same
                             - None
@@ -1883,6 +1886,7 @@ spec:
                               - All
                               - Selector
                               - Same
+                              - None
                               type: string
                             selector:
                               description: |-
