--- a/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
+++ b/config/crd/standard/gateway.networking.k8s.io_gateways.yaml
@@ -511,6 +511,7 @@ spec:
                               - All
                               - Selector
                               - Same
+                              - None
                               type: string
                             selector:
                               description: |-
@@ -1594,6 +1595,7 @@ spec:
                               - All
                               - Selector
                               - Same
+                              - None
                               type: string
                             selector:
                               description: |-
