GEP-3539: a few fixes
* Fix missing image
* Change GEP status to Memorandum
* Make GEP navigable
* Crop trailing whitespace from images

Signed-off-by: Pooja poojatrivedi@google.com

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -168,6 +168,7 @@ nav:
       - geps/gep-2659/index.md
       - geps/gep-2722/index.md
       - geps/gep-2907/index.md
+      - geps/gep-3539/index.md
     - Declined:
       - geps/gep-735/index.md
       - geps/gep-1282/index.md
